first few pages of derpdude

--- a/derp_dude_volume_0001.html
+++ b/derp_dude_volume_0001.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Derp Dude by Dimitri Castillo</title>
+        <title>Derp Dude by Dimitri Castillo - Volume 1</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,11 +20,12 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-				<h1>Derp Dude</h1>
+				<h1>Derp Dude - Volume 1</h1>
 				<h2>By Dimitri Castillo</h2>
-        <p>Derp Dude is a comic written and illustrated by Dimtri Castillo</p>
-        <p>Use the links below to check them out.</p>
-				<p><a href="derp_dude_volume_0001.html">Start</a></p>
+				<p><a href="index.html">Previous</a></p>
+
+				<img src="img/derp_dude_vol_0001.jpg" alt="Derp Dude Volume 1">
+
 				<p>
 					<ul>
 						<li><a href="index.html">Home</a></li>
