adjusted the size of the image to 100%

--- a/derp_dude_volume_0001.html
+++ b/derp_dude_volume_0001.html
@@ -24,7 +24,7 @@
 				<h2>By Dimitri Castillo</h2>
 				<p><a href="index.html">Previous</a></p>
 
-				<img src="img/derp_dude_vol_0001.JPG" alt="Derp Dude Volume 1">
+				<img src="img/derp_dude_vol_0001.JPG" style="width:100%" alt="Derp Dude Volume 1">
 
 				<p>
 					<ul>
