--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Derp Dude by Dimitri Castillo</title>
-        <meta name="description" content="">
+        <meta name="description" content="Derp Dude is a fictional comic book super hero created by Dimitry Castillo">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
