added some new pages and updated the home page with a new image.

--- a/derp_dude_volume_0002.html
+++ b/derp_dude_volume_0002.html
@@ -3,10 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-        <title>Derp Dude by Dimitri Castillo - Home</title>
-
-        <meta name="description" content="Derp Dude is a fictional comic book super hero created by Dimitry Castillo">
+        <title>Derp Dude by Dimitri Castillo - Volume 2</title>
+        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -17,7 +15,7 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-		    <!--[if lt IE 8]>
+        <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
@@ -25,28 +23,25 @@
 				<div id="fullsite">
 
 					<div id="header">
-						<h1>Derp Dude</h1>
+						<h1>Derp Dude - Volume 2</h1>
 						<h2>By Dimitri Castillo</h2>
-		        <p>Derp Dude is a comic written and illustrated by Dimtri Castillo</p>
-			      <p>Use the links below to check them out.</p>
 					</div>
 
 					<div id="breadcrumbs">
-						<p>	<a href="derp_dude_volume_0001.html">Start</a> </p>
+						<p> <a href="index.html">Home</a> | <a href="derp_dude_volume_0001.html">Previous</a> </p>
 					</div>
 
 					<div id="comiccontainer" class="comics">
-						<img src="img/derp_dude_volume_0000a.JPG" alt="Derp Dude Volume Home Page">
-						<img src="img/derp_dude_volume_0000b.JPG" alt="Derp Dude Volume Catch Phrase">
+						<img src="img/derp_dude_volume_0002.JPG" alt="Derp Dude Volume 2">
 					</div>
 
 					<div id="footernav">
 						<h2>Quick Nav</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="derp_dude_volume_0001.html">Derp Dude - Volume 1</a></li>
-							<li><a href="derp_dude_volume_0002.html">Derp Dude - Volume 2</a></li>
-						</ul>
+							<ul>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="derp_dude_volume_0001.html">Derp Dude - Volume 1</a></li>
+								<li><a href="derp_dude_volume_0002.html">Derp Dude - Volume 2</a></li>
+							</ul>
 					</div>
 
 				</div>
