--- a/derp_dude_volume_0001.html
+++ b/derp_dude_volume_0001.html
@@ -20,18 +20,31 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-				<h1>Derp Dude - Volume 1</h1>
-				<h2>By Dimitri Castillo</h2>
-				<p><a href="index.html">Previous</a></p>
+				<div id="fullsite">
 
-				<img src="img/derp_dude_vol_0001.JPG" style="width:100%" alt="Derp Dude Volume 1">
+					<div id="header">
+						<h1>Derp Dude - Volume 1</h1>
+						<h2>By Dimitri Castillo</h2>
+					</div>
 
-				<p>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="derp_dude_volume_0001.html">Derp Dude - Volume 1</a></li>
-					</ul>
-				</p>
+					<div id="breadcrumbs">
+						<p> <a href="index.html">Home</a> | <a href="index.html">Previous</a> | <a href="derp_dude_volume_0002.html">Next</a> </p>
+					</div>
+
+					<div id="comiccontainer" class="comics">
+						<img src="img/derp_dude_volume_0001.JPG" alt="Derp Dude Volume 1">
+					</div>
+
+					<div id="footernav">
+						<h2>Quick Nav</h2>
+							<ul>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="derp_dude_volume_0001.html">Derp Dude - Volume 1</a></li>
+								<li><a href="derp_dude_volume_0002.html">Derp Dude - Volume 2</a></li>
+							</ul>
+					</div>
+
+				</div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
